--- a/Src/Areas/Admin/Views/Order/Index.cshtml
+++ b/Src/Areas/Admin/Views/Order/Index.cshtml
@@ -4,7 +4,7 @@
         <div class="page-header-content">
             <div class="page-title">
                 <h5>
-                    <span class="text-semibold">لیست منو ها</span>
+                    <span class="text-semibold">لیست سفارش ها</span>
                     <small class="display-block" id="count"></small>
                 </h5>
             </div>
@@ -12,7 +12,7 @@
         <div class="breadcrumb-line">
             <ul class="breadcrumb">
                 <li><a onclick="pageLoad('/Admin/Dashboard','پنل مدیریت لپتاپ آسیا')"><i class="icon-home position-left"></i> میز کار</a></li>
-                <li class="active">لیست منو ها</li>
+                <li class="active">لیست سفارش ها</li>
             </ul>
         </div>
     </div>
