--- a/Src/Areas/Admin/Views/Partial/General/MainNavbar.cshtml
+++ b/Src/Areas/Admin/Views/Partial/General/MainNavbar.cshtml
@@ -41,7 +41,7 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-right no-padding">
                         <li><a class="text-primary"><i class="icon-user"></i><span class="text-semibold">پروفایل</span></a></li>
-                        <li><a class="text-danger-300" id="logout"><i class="icon-exit3"></i><span class="text-semibold">خروج</span></a></li>
+                        <li><a class="text-danger-300" href="/al-manage/logout"><i class="icon-exit3"></i><span class="text-semibold">خروج</span></a></li>
                     </ul>
                 </li>
             </ul>
