--- a/Src/Areas/Admin/Views/Partial/Page/PageAddEdit.cshtml
+++ b/Src/Areas/Admin/Views/Partial/Page/PageAddEdit.cshtml
@@ -69,7 +69,7 @@
                 <div class="col-lg-4 col-xs-12">
                     <label>نمایش</label>
                     <label class="ix-input-swich">
-                        @Html.CheckBoxFor(item => item.Status, new { @class = "ipx-switch" })
+                        @Html.CheckBoxFor(item => item.Status, new { @class = "cSwitch" })
                     </label>
                     <label class="ml-10">عدم نمایش</label>
                 </div>
