--- a/Src/Views/Partials/General/Product.cshtml
+++ b/Src/Views/Partials/General/Product.cshtml
@@ -60,7 +60,7 @@
             }
             else
             {
-                <a class="product-button"><i class="icon-shopping-cart"></i><span>افزودن به سبد خرید</span></a>
+                <a class="product-button" id="addToCard" data-procID="@proc.ID"><i class="icon-shopping-cart"></i><span>افزودن به سبد خرید</span></a>
             }
         </div>
     </div>
