--- a/Src/Views/Partials/General/Subscription.cshtml
+++ b/Src/Views/Partials/General/Subscription.cshtml
@@ -15,7 +15,7 @@
         </div>
     </form>
     <div class="pt-3 nemad">
-        <a href=""><img class="" alt="enamad" src="~/Content/Images//enamad.png"></a>
-        <a href=""><img class="" alt="enamad" src="~/Content/Images//samandehi.png"></a>
+        <a href=""><img class="" alt="enamad" src="~/Content/Images/enamad.png"></a>
+        <a href=""><img class="" alt="enamad" src="~/Content/Images/samandehi.png"></a>
     </div>
 </section>
