--- a/Src/Views/Partials/General/ToolBar.cshtml
+++ b/Src/Views/Partials/General/ToolBar.cshtml
@@ -6,7 +6,7 @@
 <div class="search-box-wrap d-flex">
     <div class="search-box-inner align-self-center">
         <div class="search-box d-flex">
-            <form class="input-group" action="/Product/Search" method="get">
+            <form class="input-group" action="/Search" method="get">
                 <span class="input-group-btn">
                     <button type="submit"><i class="icon-search"></i></button>
                 </span>
@@ -51,23 +51,15 @@
         }
         else
         {
-            <a href="Account/Card">
-                <div><span class="cart-icon"><i class="icon-shopping-cart"></i><span class="count-label">3   </span></span><span class="text-label">سبد خرید</span></div>
+            <a href="/Card">
+                <div><span class="cart-icon"><i class="icon-shopping-cart"></i><span class="count-label" id="card-count"></span></span><span class="text-label">سبد خرید</span></div>
             </a>
-            <div class="toolbar-dropdown cart-dropdown widget-cart hidden-on-mobile">
-                <!-- Entry-->
-                <div class="entry">
-                    <div class="entry-thumb"><a href="shop-single.html"><img src="~/Content/Images//shop/widget/06.jpg" alt="Product"></a></div>
-                    <div class="entry-content">
-                        <h4 class="entry-title"><a href="shop-single.html" lang="en">پرینتر لیزر جت پرو اچ‌پی</a></h4><span class="entry-meta">1 عدد | 1،500،000 تومان</span>
-                    </div>
-                    <div class="entry-delete"><i class="icon-x-circle"></i></div>
-                </div>
+            <div class="toolbar-dropdown cart-dropdown widget-cart hidden-on-mobile" id="card-result-box">
                 <div class="text-center">
-                    <p class="text-gray-dark py-2 mb-0"><span class='text-muted'>جمع کل :</span> 1،500،000 تومان &nbsp;</p>
+                    <p class="text-gray-dark py-2 mb-0"><span class='text-muted'>جمع کل :</span><span id="totalCount"></span></p>
                 </div>
                 <div class="d-flex">
-                    <div class="w-400"><a class="btn btn-secondary btn-sm btn-block mb-0" href="cart.html">مشاهد سبد خرید</a></div>
+                    <div class="w-400"><a class="btn btn-secondary btn-sm btn-block mb-0" href="/Card">مشاهد سبد خرید</a></div>
                 </div>
             </div>
         }
@@ -77,7 +69,7 @@
 <div class="mobile-menu">
     <!-- Search Box-->
     <div class="mobile-search">
-        <form class="input-group" action="/Home/Search" method="get">
+        <form class="input-group" action="/Search" method="get">
             <span class="input-group-btn">
                 <button type="submit"><i class="icon-search"></i></button>
             </span>
