--- a/Src/Views/Error/NotFound.cshtml
+++ b/Src/Views/Error/NotFound.cshtml
@@ -9,15 +9,13 @@
     <meta name="keywords" content="فروشگاه لپتاپ آسیا">
     <meta name="author" content="T.Yasaghi">
 }
-
-    <!-- Page Content-->
-    <section class="fw-section margin-top-1x">
-        <h1 class="display-404 text-center text-mute">404</h1>
-    </section>
-    <div class="container padding-bottom-3x mb-1">
-        <div class="text-center">
-            <h2 dir="rtl">صفحه‌ای که دنبال آن بودید پیدا نشد!</h2>
-            <a class="btn btn-primary" href="/">صفحه اصلی</a>
-        </div>
+<section class="fw-section margin-top-1x">
+    <h1 class="display-404 text-center text-mute">404</h1>
+</section>
+<div class="container padding-bottom-2x">
+    <div class="text-center">
+        <h2 dir="rtl">صفحه‌ای که دنبال آن بودید پیدا نشد!</h2>
+        <a class="btn btn-primary" href="/">صفحه اصلی</a>
     </div>
+</div>
 
