--- a/Src/Areas/Admin/Views/Partial/Order/OrderList.cshtml
+++ b/Src/Areas/Admin/Views/Partial/Order/OrderList.cshtml
@@ -1,20 +1,27 @@
 ﻿<script id="orderSource" type="text/x-handlebars-template">
     {{#each list}}
     <tr role="row">
-        <td class="text-center pr-40 text-xlarge">{{ID}}</td>
+        <td class="text-center pr-40 text-xlarge">ALO-{{ID}}</td>
         <td class="text-center pr-40 text-muted">{{SubmitDate}}</td>
         <td class="text-center pr-40"><span class="text-info-800">{{CustName}}</span></td>
         <td class="text-center pr-40">
-            {{#if PymentStatus}}
+            {{#if IsPrint}}
             <span class="label label-rounded label-icon label-success"><i class="icon-checkmark3"></i></span>
             {{else}}
             <span class="label label-rounded label-icon label-danger"><i class="icon-cross2"></i></span>
             {{/if}}
         </td>
         <td class="text-center pr-40"><span class="text-green-800 text-bold text-large">{{TotalPrice}} تومان</span></td>
-        <td class="text-center pr-40 text-grey-300">{{Status}}</td>
+        <td class="text-center text-grey-300 pr-40">
+            {{#if PaymentStatus}}
+            <span class="label label-rounded label-icon label-success"><i class="icon-checkmark3"></i></span>
+            {{else}}
+            <span class="label label-rounded label-icon label-danger"><i class="icon-cross2"></i></span>
+            {{/if}}
+        </td>
+        <td class="text-center pr-40"><span class="label label-rounded bg-slate">{{StatusName}}</span></td>
         <td class="text-center control">
-            <a class="text-blue-800"><i class="icon-pencil"></i>جزئیات</a>
+            <a class="text-grey-300" onclick="pageLoad('/Admin/Order/Detail/{{ID}}','جزئیات سفارش ALO-{{ID}}','orderList')"><i class="icon-chevron-left"></i></a>
         </td>
     </tr>
     {{/each}}
@@ -45,12 +52,11 @@
                     <th class="sorting_desc" data-sort="ID" data-sort-type="desc">شناسه</th>
                     <th class="text-center sorting pr-40 text-center" data-sort="SubmitDate" data-sort-type="">تاریخ ثبت</th>
                     <th class="text-center sorting pr-40 text-center" data-sort="CustName" data-sort-type="">نام مشتری</th>
-                    <th class="text-center sorting pr-40" data-sort="PaymentStatus" data-sort-type="">وضعیت پرداخت</th>
+                    <th class="text-center sorting pr-40" data-sort="IsPrint" data-sort-type="">درخواست فاکتور</th>
                     <th class="text-center sorting pr-40" data-sort="TotalPrice" data-sort-type="">مبلغ کل</th>
-                    <th class="text-center sorting pr-40" data-sort="BrandID" data-sort-type="">برند</th>
-                    <th class="text-center sorting pr-40" data-sort="VisitCount" data-sort-type="">تعداد بازدید</th>
+                    <th class="text-center sorting pr-40" data-sort="PaymentStatus" data-sort-type="">وضعیت پرداخت</th>
                     <th class="text-center sorting pr-40" data-sort="Status" data-sort-type="">وضعیت</th>
-                    <th class="text-center control sorting_disabled">عملیات</th>
+                    <th class="text-center control sorting_disabled">جزئیات</th>
                 </tr>
             </thead>
             <tbody></tbody>
