--- a/Src/Views/Partials/General/ToolBar.cshtml
+++ b/Src/Views/Partials/General/ToolBar.cshtml
@@ -54,14 +54,7 @@
             <a href="/Card">
                 <div><span class="cart-icon"><i class="icon-shopping-cart"></i><span class="count-label" id="card-count"></span></span><span class="text-label">سبد خرید</span></div>
             </a>
-            <div class="toolbar-dropdown cart-dropdown widget-cart hidden-on-mobile" id="card-result-box">
-                <div class="text-center">
-                    <p class="text-gray-dark py-2 mb-0"><span class='text-muted'>جمع کل :</span><span id="totalCount"></span></p>
-                </div>
-                <div class="d-flex">
-                    <div class="w-400"><a class="btn btn-secondary btn-sm btn-block mb-0" href="/Card">مشاهد سبد خرید</a></div>
-                </div>
-            </div>
+            <div class="toolbar-dropdown cart-dropdown widget-cart hidden-on-mobile" id="card-result-box"></div>
         }
     </div>
 </div>
